--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,30 @@ div.subtitle {
     overflow-y: auto;
     border-right: 1px solid #aaa;
     position: relative;
+    /* animation: 1s slide-right 1s forwards; */
+    /* transform:translateX(-100%); */
 }
+
+
+
+/* .scripturecontent{
+  animation: 0.1s slide-right 0.1s forwards;
+  transform:translateX(0%);
+} */
+/* @keyframes slide-right {
+  to {
+    transform:translateX(0);
+  }
+} */
+
+/* .scripturecontent-view{
+  transform:translateX(0);
+}
+.scripturecontent-first{
+  transition: 1s;
+  left: 0;
+} */
+
 
 #scripnav {
     position: absolute;
@@ -280,4 +303,276 @@ span.verse {
 
 li.match {
     background-color: #ffffcc;
+}
+
+@media screen and (min-width: 100px) and (max-width: 200px) {
+  #content{
+    position: absolute;
+    top: 60px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    align-content: stretch;
+  }
+  #map {
+      flex: 1 1 50%;
+      order:1;
+  }
+  #scriptures {
+      min-width: 50px;
+      max-width: 700px;
+      flex: 1 1 50%;
+      height: 50%;
+      min-height: 50%;
+      overflow-x: auto ;
+      overflow-y: auto;
+      border-right: 1px solid #aaa;
+      position: relative;
+      order:2;
+  }
+  #header {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      background-color: #3f2000;
+      height:5%;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+      align-items: center;
+      z-index: 10000;
+  }
+  #centerhead {
+      display: none;
+
+  }
+
+  #crumbs {
+      display: flex;
+      max-width: 700px;
+      justify-content: center;
+      text-align: center;
+      padding-left: 1.25em;
+      flex: 1 1 100%;
+      order: 2;
+  }
+
+
+  #crumbs ul{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    padding-left: 0em;
+  }
+  #crumbs li::before {
+      content: none;
+      padding: 0em;
+  }
+
+  div.navheading {
+      font-size: 13pt;
+      text-align: center;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      height: 22%;
+  }
+  .navheading .divtitle {
+    left: 1em;
+    text-align: center;
+
+  }
+  div.navheading .nextprev {
+      left:1em;
+      padding: 1em;
+  }
+
+
+}
+
+@media screen and (min-width: 200px) and (max-width: 400px) {
+  #content{
+    position: absolute;
+    top: 120px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    align-content: stretch;
+  }
+  #map {
+      flex: 1 1 50%;
+      order:1;
+  }
+  #scriptures {
+      min-width: 220px;
+      max-width: 700px;
+      flex: 1 1 50%;
+      height: 50%;
+      min-height: 50%;
+      overflow-x: hidden;
+      overflow-y: auto;
+      border-right: 1px solid #aaa;
+      position: relative;
+      order:2;
+  }
+  #header {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      background-color: #3f2000;
+      height:10%;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+      align-items: center;
+      z-index: 10000;
+  }
+  #centerhead {
+      display: flex;
+      flex: 1 1 40%;
+      justify-content: center;
+      font-weight: normal;
+      text-align: center;
+      flex-direction: column;
+      order:1;
+  }
+
+  #crumbs {
+      display: flex;
+      max-width: 700px;
+      justify-content: center;
+      text-align: center;
+      padding-left: 1.25em;
+      flex: 1 1 60%;
+      order: 2;
+  }
+
+
+  #crumbs ul{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    padding-left: 0em;
+  }
+  #crumbs li::before {
+      content: none;
+      padding: 0em;
+  }
+
+
+}
+@media screen and (min-width: 400px) and (max-width: 700px) {
+  #content{
+    position: absolute;
+    top: 56px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    align-content: stretch;
+  }
+  #map {
+      flex: 1 1 50%;
+      order:1;
+  }
+  #scriptures {
+      min-width: 220px;
+      max-width: 700px;
+      flex: 1 1 50%;
+      height: 50%;
+      min-height: 50%;
+      overflow-x: hidden;
+      overflow-y: auto;
+      border-right: 1px solid #aaa;
+      position: relative;
+      order:2;
+  }
+  #header {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      background-color: #3f2000;
+      color: white;
+      height: 5%;
+      display: flex;
+      flex-direction: column;
+      box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+      align-items: center;
+      z-index: 10000;
+  }
+  #centerhead {
+      display: flex;
+      flex: 1 1 50%;
+      justify-content: center;
+      font-weight: normal;
+      text-align: center;
+      flex-direction: column;
+      order:1;
+  }
+
+  #crumbs {
+      display: flex;
+      max-width: 700px;
+      justify-content: center;
+      text-align: center;
+      padding-left: 1.25em;
+      flex: 1 1 50%;
+      order: 2;
+  }
+
+}
+@media screen and (min-width: 700px) and (max-width: 1000px) {
+  #crumbs {
+      min-width: 220px;
+      max-width: 700px;
+      flex: 1 1 30%;
+      overflow-x: hidden;
+      overflow-y: auto;
+      position: relative;
+      order:1;
+  }
+  #centerhead {
+      display: flex;
+      flex: 1 1 70%;
+      justify-content: center;
+      font-weight: normal;
+      text-align: center;
+      flex-direction: column;
+      order:2;
+  }
+  #header {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      background-color: #3f2000;
+      color: white;
+      height: 5%;
+      display: flex;
+      flex-direction: row;
+      box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+      align-items: center;
+      z-index: 10000;
+  }
+
 }
